upate title and content after finalising vision

--- a/expose/title.tex
+++ b/expose/title.tex
@@ -15,13 +15,13 @@
 Faculty IV\\
 \href{http://www.eecs.tu-berlin.de/menue/fakultaet_iv}{Electrical Engineering and Computer Science}
 
-\vspace{3.5cm}
+\vspace{3cm}
 
 {\Large \textbf{Master Thesis Exposé}}\\
 
 \vspace{1cm}
 
-{\Huge \textbf{Testautomation of HbbTV Apps}}\\
+{\Huge \textbf{Design and Implementation of a Development and Test Automation Platform for HbbTV}}\\
 
 \vspace{3cm}
 
@@ -34,10 +34,8 @@ Faculty IV\\
 \begin{large}
 \begin{tabbing}
 Supervisor: \hspace{0.5cm}\=Dipl.-Ing. Louay Bassbouss\\
-Date: \> \today\\
+Date: \> \today
 \end{tabbing}
-\end{large}}\\
+\end{large}}
 
 \end{center}
-
-\newpage
