--- a/index.tex
+++ b/index.tex
@@ -6,7 +6,7 @@
 
 \usepackage[ngerman, english]{babel}
 \usepackage{bibgerm}       		% german references
-\usepackage[latin1]{inputenc} % german characters
+\usepackage[utf8]{inputenc}   % german characters
 \usepackage{graphicx} 				% it's recommended to use PDF images but you can use JPG or PNG as well
 \usepackage{url}           		% format URLs
 \usepackage{hyperref} 				% create hyperlinks
