remove thesis title in page header

--- a/misc/titlepage.tex
+++ b/misc/titlepage.tex
@@ -20,7 +20,7 @@ http://www.qds.tu-berlin.de/\\
 
 \vspace*{1.0cm}
 
-{\LARGE Diploma Thesis}\\
+{\LARGE Master Thesis}\\
 
 \vspace{1.0cm}
 {\LARGE \textbf{Design and Implementation}}\\
