first write down of the outline

--- a/index.tex
+++ b/index.tex
@@ -61,13 +61,13 @@
 
 \mainmatter % comment single chapters for faster compilation
 
-    \input{./chapters/chapter1}
-    \input{./chapters/chapter2}
-    \input{./chapters/chapter3}
-    \input{./chapters/chapter4}
-    \input{./chapters/chapter5}
-    \input{./chapters/chapter6}
-    \input{./chapters/chapter7}
+    \input{./chapters/1_introduction}
+    \input{./chapters/2_state_of_the_art}
+    \input{./chapters/3_requirements}
+    \input{./chapters/4_concept}
+    \input{./chapters/5_implementation}
+    \input{./chapters/6_evaluation}
+    \input{./chapters/7_conclusion}
 
 % ---------------------------------------------------------------
 \backmatter % no page numbering from here
