finish up scope part

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1,6 +1,21 @@
 % This file was created with JabRef 2.5.
 % Encoding: Cp1252
 
+@ARTICLE{devtools,
+  author = {Brenda Barron},
+  title = {Why You Should Start Using Chrome Developer Tools Right Now},
+  year = {2015},
+  publisher = {elegant themes},
+  url = {https://www.elegantthemes.com/blog/resources/why-you-should-start-using-chrome-developer-tools-right-now}
+}
+
+@MANUAL{devtoolsprotocol,
+  title = {Chrome DevTools Protocol Viewer - latest (tip-of-tree)},
+  author = {Chrome DevTools team},
+  organization = {Google},
+  url = {https://chromedevtools.github.io/devtools-protocol/}
+}
+
 @MISC{timwww,
   author = {Tim Berners-Lee},
   title = {WWW Book (no real book, just an example)}
@@ -45,4 +60,3 @@
   year = {2001},
   note = {\url{http://www.w3.org/TR/wsdl}}
 }
-
