finish part on HbbTV

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -16,6 +16,23 @@
   url = {https://chromedevtools.github.io/devtools-protocol/}
 }
 
+@ARTICLE{zte,
+  author = {Yiling Xu, Shaowei Xie, Hao Chen, Le Yang, and Jun Sun},
+  title = {DASH and MMT and Their Applications in ATSC 3.0},
+  year = {2016},
+  journal = {ZTE COMMUNICATIONS},
+  volume = {14},
+  number = {1},
+  pages = {39--50}
+}
+
+@ARTICLE{evolution,
+  author = {Podhradsky, Pavol},
+  title = {Evolution trends in hybrid broadcast broadband TV.},
+  year = {2013},
+  journal = {ELMAR, 2013 55th International Symposium}
+}
+
 @MISC{timwww,
   author = {Tim Berners-Lee},
   title = {WWW Book (no real book, just an example)}
