--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -2,17 +2,25 @@
 
 \begin{tabbing}
 spacespacespace \= space \kill
-HbbTV \> Hybrid Broadcast Broadband Television\\
+AIT \> Application Information Table\\
 AJAX \> Asynchronous JavaScript and XML\\
 API \> Application Programming Interface\\
+CE \> Conformité Européenne\\
 CSS \> Cascading Stylesheets\\
+DASH \> Dynamic Adaptive Streaming over HTTP\\
 DHTML \> Dynamic HTML\\
 DOM \> Document Object Model\\
+ETSI \> European Telecommunications Standards Institute\\
 FOKUS \> Fraunhofer Institut fuer offene Kommunikationssysteme\\
 GUI \> Graphical User Interface\\
+HbbTV \> Hybrid Broadcast Broadband Television\\
 HTML \> Hypertext Markup Language\\
 HTTP \> Hypertext Transfer Protocol\\
+ISO \> International Organization for Standardization\\
 JSON \> JavaScript Object Notation\\
+MHP \> Multimedia Home Platform\\
+MPEG \> Moving Picture Experts Group\\
+UPnP \> Universal Plug and Play\\
 W3C \> World Wide Web Consortium\\
 \end{tabbing}
 \endinput
