--- a/misc/annex.tex
+++ b/misc/annex.tex
@@ -2,31 +2,22 @@
 
 \begin{appendix}
 
-\lstset{language=,caption=Sourcecode Listing,captionpos=b,
-label=yahoowidgetkon,showstringspaces=false,
+\lstset{language=,caption=A list of countries where HbbTV is - will be - or is considered to be deployed,captionpos=b,
+label=hbbtvdeployed,showstringspaces=false,
 basicstyle={\fontfamily{pcr}\selectfont\footnotesize}}
 \begin{lstlisting}
-<?xml version="1.0" encoding="UTF-8"?>
-<widget>
-	 <debug>off</debug>
-	 <window name="myWindow" title="Hello Widget" visible="true">
-		 <height>120</height>
-		 <width>320</width>
-		 <image src="Resources/orangebg.png">
-			<name>orangebg</name>
-			<hOffset>0</hOffset>
-			<vOffset>0</vOffset>
-		</image>
-		 <text>
-			 <name>myText</name>
-			 <data>Hello Widget</data>
-			 <color>#000000</color>
-			 <size>20</size>
-			 <vOffset>50</vOffset>
-			 <hOffset>120</hOffset>
-		 </text>
-	</window>
-</widget>
+In Regular Operation: Australia, Austria, Bosnia and Herzegovina, Bulgaria,
+Czech Republic, Denmark, Estonia, Finland, France, Germany, Hungary, Italy,
+Luxembourg, Madagascar, Malaysia, Mauritius, Namibia, Netherlands, New Zealand,
+Norway, Poland, Saudi Arabia, Senegal, Singapore, Slovakia, Slovenia, Spain,
+Sweden, Switzerland, Turkey, United Arab Emirates, United Kingdom
+
+Announced / Trials: Croatia, Gambia, Ireland, Ivory Coast, Jordan, South Africa
+
+Under Consideration: Algeria, Belgium, Brazil, Burkina Faso, Chad, China, Columbia,
+Egypt, Ghana, Guinea, Indonesia, Iran, Iraq, Liberia, Libya, Mali, Mauritania,
+Morocco, Myanmar, Niger, Oman, Portugal, Russia, Sierra Leone, Sudan, Syria,
+Thailand, Tunisia, Vietnam, Yemen
 \end{lstlisting}
 
 \newpage
