finish up HbbTV examples and use cases

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -33,9 +33,10 @@
   journal = {ELMAR, 2013 55th International Symposium}
 }
 
-@MISC{timwww,
-  author = {Tim Berners-Lee},
-  title = {WWW Book (no real book, just an example)}
+@MISC{adrTV,
+  author = {Gartnet},
+  title = {Gartner IT Glossary > Addressable TV Advertising},
+  url = {http://www.gartner.com/it-glossary/addressable-tv-advertising}
 }
 
 @MISC{billgates,
