finish up 'HbbTV Runtime Environment' section

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -39,14 +39,18 @@
   url = {http://www.gartner.com/it-glossary/addressable-tv-advertising}
 }
 
-@MISC{billgates,
-  author = {Bill Gates},
-  title = {no real citate}
+@MANUAL{hbbtv15,
+  title = {ETSI TS 102 796 V1.2.1},
+  author = {HbbTV Association},
+  month = {11},
+  year = {2012}
 }
 
-@MISC{stevejobs,
-  author = {Steve Jobs},
-  title = {no real citate}
+@MANUAL{biapps,
+  author = {Klaus Merkel},
+  title = {HbbTV — a hybrid broadcast-broadband system for the living room},
+  organization = {IRT Munich},
+  year = {2010}
 }
 
 @BOOK{SIPBook,
