finish up 'Development of HbbTV Applications'

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -76,9 +76,10 @@
   series = {Request for Comments}
 }
 
-@MANUAL{w3cwsdl,
-  title = {Web Services Description Language (WSDL) 1.1},
-  organization = {W3C},
-  year = {2001},
-  note = {\url{http://www.w3.org/TR/wsdl}}
+@misc{hbbtvenv,
+  author = "HbbTV Developer",
+  title = "Setting up a development environment --- HbbTV Developer{,} ",
+  year = "2015",
+  url = "\url{http://www.hbbtv-developer.com/site/wiki/index.php?title=Setting_up_a_development_environment&oldid=658}",
+  note = "[Online; accessed 6-June-2017]"
 }
