finish up 'Available test solutions'

--- a/index.tex
+++ b/index.tex
@@ -13,6 +13,7 @@
 \usepackage{listings, color}	% for source code
 \usepackage{subfig}						% two figures next to each other (example: figure 3a), figure 3b)
 \usepackage{scrpage2}					% header and footer line
+\usepackage{eurosym}
 
 % header and footer line - no header & footer line on pages where a new chapter starts
 \pagestyle{scrheadings}
