--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -10,6 +10,8 @@ CSS \> Cascading Stylesheets\\
 DASH \> Dynamic Adaptive Streaming over HTTP\\
 DHTML \> Dynamic HTML\\
 DOM \> Document Object Model\\
+DVB \> Digital Video Broadcasting\\
+e2e \> end-to-end\\
 ETSI \> European Telecommunications Standards Institute\\
 FOKUS \> Fraunhofer Institut fuer offene Kommunikationssysteme\\
 GUI \> Graphical User Interface\\
