--- a/bib/references.bib
+++ b/bib/references.bib
@@ -83,3 +83,9 @@
   url = "\url{http://www.hbbtv-developer.com/site/wiki/index.php?title=Setting_up_a_development_environment&oldid=658}",
   note = "[Online; accessed 6-June-2017]"
 }
+
+@MISC{scriptstudio,
+  author = {eurofins - Digital Testing},
+  title = {TestWizard Tool Suite},
+  url = "\url{http://www.eurofins-digitaltesting.com/media/28855/testwizard.pdf}"
+}
