finished test automation section

--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -8,6 +8,7 @@ API \> Application Programming Interface\\
 CE \> Conformité Européenne\\
 CSS \> Cascading Stylesheets\\
 DASH \> Dynamic Adaptive Streaming over HTTP\\
+DevOps \> "software DEVelopment" and "information technology OPerationS"\\
 DHTML \> Dynamic HTML\\
 DOM \> Document Object Model\\
 DVB \> Digital Video Broadcasting\\
@@ -22,6 +23,7 @@ ISO \> International Organization for Standardization\\
 JSON \> JavaScript Object Notation\\
 MHP \> Multimedia Home Platform\\
 MPEG \> Moving Picture Experts Group\\
+QA \> Quality Assurance\\
 UPnP \> Universal Plug and Play\\
 W3C \> World Wide Web Consortium\\
 \end{tabbing}
