--- a/bib/references.bib
+++ b/bib/references.bib
@@ -97,3 +97,10 @@
   year = {2009},
   url = "\url{https://www.mountaingoatsoftware.com/blog/the-forgotten-layer-of-the-test-automation-pyramid}"
 }
+
+@MISC{devops,
+  author = {BEPEC},
+  title = {What exactly is DevOps?},
+  year = {2017},
+  url = "\url{https://www.bepec.in/single-post/2017/02/09/What-exactly-is-DevOps}"
+}
