finished 'Selenium in a Nutshell'

--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -24,6 +24,7 @@ JSON \> JavaScript Object Notation\\
 MHP \> Multimedia Home Platform\\
 MPEG \> Moving Picture Experts Group\\
 QA \> Quality Assurance\\
+REST \> Representational state transfer\\
 UPnP \> Universal Plug and Play\\
 W3C \> World Wide Web Consortium\\
 \end{tabbing}
