started with 'Chrome Remote Debugging Protocol' section

--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -19,6 +19,7 @@ GUI \> Graphical User Interface\\
 HbbTV \> Hybrid Broadcast Broadband Television\\
 HTML \> Hypertext Markup Language\\
 HTTP \> Hypertext Transfer Protocol\\
+IDE \> Integrated Development Environment\\
 ISO \> International Organization for Standardization\\
 JSON \> JavaScript Object Notation\\
 MHP \> Multimedia Home Platform\\
