finised 'Web Platform Tests' and the whoke 'State of the art' section

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -62,21 +62,6 @@
   note = {ISBN: 0321579364}
 }
 
-@STANDARD{rfcsip,
-  title = {SIP: Session Initiation Protocol},
-  author = {J. Rosenberg and H. Schulzrinne and G. Camarillo and A. Johnston
-	and J. Peterson and R. Sparks and M. Handley and E. Schooler},
-  howpublished = {RFC 3261 (Proposed Standard)},
-  number = {3261},
-  month = jun,
-  year = {2002},
-  note = {Updated by RFCs 3265, 3853, 4320, 4916, 5393},
-  url = {http://www.ietf.org/rfc/rfc3261.txt},
-  organisation = {Internet Engineering Task Force},
-  publisher = {IETF},
-  series = {Request for Comments}
-}
-
 @misc{hbbtvenv,
   author = "HbbTV Developer",
   title = "Setting up a development environment --- HbbTV Developer{,} ",
@@ -103,4 +88,18 @@
   title = {What exactly is DevOps?},
   year = {2017},
   url = "\url{https://www.bepec.in/single-post/2017/02/09/What-exactly-is-DevOps}"
+}
+
+@MISC{w3ctesting,
+  author = {Tobie Langel},
+  title = {Testing The Open Web Platform},
+  year = {2017},
+  url = "\url{https://www.w3.org/blog/2013/02/testing-the-open-web-platform/}"
+}
+
+@MISC{hbbtvtesting,
+  author = {Dr. Bob Campbell},
+  title = {Whitepaper on HbbTV Testing for Broadcasters and Operators},
+  year = {2015},
+  url = "\url{https://www.hbbtv.org/wp-content/uploads/2015/11/HbbTV-SG-00058-004-HbbTV-Whitepaper-on-HbbTV-Testing-for-Broadcasters-and-Operators-September-2015.pdf}"
 }
