--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -26,7 +26,9 @@ MHP \> Multimedia Home Platform\\
 MPEG \> Moving Picture Experts Group\\
 QA \> Quality Assurance\\
 REST \> Representational state transfer\\
+SSL \> Secure Sockets Layer\\
 UPnP \> Universal Plug and Play\\
+USB \> Universal Serial Bus\\
 W3C \> World Wide Web Consortium\\
 \end{tabbing}
 \endinput
