better code highlighting with minted

--- a/index.tex
+++ b/index.tex
@@ -14,6 +14,7 @@
 \usepackage{subfig}						% two figures next to each other (example: figure 3a), figure 3b)
 \usepackage{scrpage2}					% header and footer line
 \usepackage{eurosym}
+\usepackage{minted}
 
 % header and footer line - no header & footer line on pages where a new chapter starts
 \pagestyle{scrheadings}
@@ -55,7 +56,7 @@
     \listoffigures
     \thispagestyle{empty}
 
-    \listoftables
+    \listoflistings
     \thispagestyle{empty}
 
 % --------------------------------------------------------------
