finished 'Raspberry Pi' section

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -103,3 +103,9 @@
   year = {2015},
   url = "\url{https://www.hbbtv.org/wp-content/uploads/2015/11/HbbTV-SG-00058-004-HbbTV-Whitepaper-on-HbbTV-Testing-for-Broadcasters-and-Operators-September-2015.pdf}"
 }
+
+@MISC{raspberrypi,
+  author = {Mirjana Maksimović, Vladimir Vujović, Nikola Davidović, Vladimir Milošević and Branko Perišić},
+  title = {Raspberry Pi as Internet of Things hardware: Performances and Constraints },
+  year = {2014},
+}
