--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -5,6 +5,7 @@ spacespacespace \= space \kill
 AIT \> Application Information Table\\
 AJAX \> Asynchronous JavaScript and XML\\
 API \> Application Programming Interface\\
+ARM \> Advanced RISC Machine\\
 CE \> Conformité Européenne\\
 CSS \> Cascading Stylesheets\\
 DASH \> Dynamic Adaptive Streaming over HTTP\\
@@ -15,6 +16,7 @@ DVB \> Digital Video Broadcasting\\
 e2e \> end-to-end\\
 ETSI \> European Telecommunications Standards Institute\\
 FOKUS \> Fraunhofer Institut fuer offene Kommunikationssysteme\\
+GHz \> Gigahertz\\
 GUI \> Graphical User Interface\\
 HbbTV \> Hybrid Broadcast Broadband Television\\
 HTML \> Hypertext Markup Language\\
