started introduction to CI/CD section

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -109,3 +109,12 @@
   title = {Raspberry Pi as Internet of Things hardware: Performances and Constraints },
   year = {2014},
 }
+
+@BOOK{jenkins,
+  title = {Jenkins Continuous Integration Cookbook},
+  publisher = {PACKT Publishing},
+  year = {2012},
+  month = {6},
+  author = {Alan Mark Berg},
+  note = {ISBN: 1849517401}
+}
