added stuff to implementation

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -118,3 +118,19 @@
   author = {Alan Mark Berg},
   note = {ISBN: 1849517401}
 }
+
+@BOOK{socket,
+  title = {Enterprise Web Development: Building HTML5 Applications: From Desktop to Mobile},
+  publisher = {O'Reilly Media},
+  year = {2014},
+  month = {7},
+  author = {Yakov Fain, Victor Rasputnis, Anatole Tartakovsky, Viktor Gamov},
+  note = {ISBN: 1449356818}
+}
+
+@MISC{barrel,
+  title = {TypeScript Deep Dive},
+  author = {Basarat Ali Syed},
+  year = {2017},
+  url = "\url{https://www.gitbook.com/book/basarat/typescript/details}"
+}
