--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -31,6 +31,7 @@ REST \> Representational state transfer\\
 SSL \> Secure Sockets Layer\\
 UPnP \> Universal Plug and Play\\
 USB \> Universal Serial Bus\\
+uuid \> Universally unique identifier\\
 W3C \> World Wide Web Consortium\\
 \end{tabbing}
 \endinput
