more to autoload and hbbtv driver

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -134,3 +134,10 @@
   year = {2017},
   url = "\url{https://www.gitbook.com/book/basarat/typescript/details}"
 }
+
+@MANUAL{devtoolsprotocolDOM,
+  title = {Chrome DevTools Protocol Viewer - latest (tip-of-tree) - DOM Domain},
+  author = {Chrome DevTools team},
+  organization = {Google},
+  url = {https://chromedevtools.github.io/devtools-protocol/tot/DOM/#event-documentUpdated}
+}
