finish up driver architecture and grid setup

--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -10,6 +10,7 @@ CE \> Conformité Européenne\\
 CSS \> Cascading Stylesheets\\
 DASH \> Dynamic Adaptive Streaming over HTTP\\
 DevOps \> "software DEVelopment" and "information technology OPerationS"\\
+DHCP \> Dynamic Host Configuration Protocol\\
 DHTML \> Dynamic HTML\\
 DOM \> Document Object Model\\
 DVB \> Digital Video Broadcasting\\
@@ -28,6 +29,7 @@ MHP \> Multimedia Home Platform\\
 MPEG \> Moving Picture Experts Group\\
 QA \> Quality Assurance\\
 REST \> Representational state transfer\\
+SSH \> Secure Shell\\
 SSL \> Secure Sockets Layer\\
 UPnP \> Universal Plug and Play\\
 USB \> Universal Serial Bus\\
