finish evalutation of debugging part

--- a/misc/annex.tex
+++ b/misc/annex.tex
@@ -20,52 +20,86 @@ Morocco, Myanmar, Niger, Oman, Portugal, Russia, Sierra Leone, Sudan, Syria,
 Thailand, Tunisia, Vietnam, Yemen
 \end{lstlisting}
 
-\newpage
+\vspace{1cm}
 
-
-\lstset{caption=SIP request and response packet\cite{SIPBook},
-captionpos=b,label=sippacket,showstringspaces=false,
+\lstset{caption=Request to INFOnline (http://de.ioam.de) containing user data,
+captionpos=b,label=ioam,showstringspaces=false,
 basicstyle={\fontfamily{pcr}\selectfont\footnotesize}}
 \begin{lstlisting}
-INVITE sip:bob@network.org SIP/2.0
-Via: SIP/2.0/UDP 100.101.102.103:5060;branch=z9hG4bKmp17a
-Max-Forwards: 70
-To: Bob <sip:bob@network.org>
-From: Alice <sip:alice@ims-network.org>;tag=42
-Call-ID: 10@100.101.102.103
-CSeq: 1 INVITE
-Subject: How are you?
-Contact: <sip:xyz@network.org>
-Content-Type: application/sdp
-Content-Length: 159
-v=0
-o=alice 2890844526 2890844526 IN IP4 100.101.102.103
-s=Phone Call
-t=0 0
-c=IN IP4 100.101.102.103
-m=audio 49170 RTP/AVP 0
-a=rtpmap:0 PCMU/8000
-
-SIP/2.0 200 OK
-Via: SIP/2.0/UDP proxy.network.org:5060;branch=z9hG4bK83842.1
-;received=100.101.102.105
-Via: SIP/2.0/UDP 100.101.102.103:5060;branch=z9hG4bKmp17a
-To: Bob <sip:bob@network.org>;tag=314159
-From: Alice <sip:alice@network.org>;tag=42
-Call-ID: 10@100.101.102.103
-CSeq: 1 INVITE
-Contact: <sip:foo@network.org>
-Content-Type: application/sdp
-Content-Length: 159
-v=0
-o=bob 2890844526 2890844526 IN IP4 200.201.202.203
-s=Phone Call
-c=IN IP4 200.201.202.203
-t=0 0
-m=audio 49172 RTP/AVP 0
-a=rtpmap:0 PCMU/8000
+st:redpro7
+cp:p7de_Homepage
+sv:ke
+co:http://hbbtv.prosieben.de/Startseite/P7 Comedy Male Dashboard_15089/The
+   Big Bang Theory_1389783/others/others
+pt:CP
+rf:hbbtv.redbutton.de
+r2:http://hbbtv.redbutton.de/service/redbutton.php?brand=p7de
+ur:hbbtv.prosieben.de
+xy:1920x1080x24
+lo:DE/Berlin
+cb:000d
+vr:312
+id:jvaob5
+lt:1499955480751
+ev:
+cs:oj7bdp
+mo:1
 \end{lstlisting}
 
+\newpage
+
+\lstset{caption=Request parameter to New Relic aggregator (http://bam.nr-data.net),
+captionpos=b,label=newrelic,showstringspaces=false,
+basicstyle={\fontfamily{pcr}\selectfont\footnotesize}}
+\begin{lstlisting}
+a:24863135
+sa:1
+v:974.7d740e1
+t:Unnamed Transaction
+rst:2326
+ref:http://hbbtv.prosieben.de/v2/dashboard/p7de
+be:-509
+fe:2555
+dc:1368
+af:err,xhr,ins
+perf:{"timing":{"of":1499955479727,"n":0,"f":0,"dn":0,"dne":0,"c":0,"ce":0,
+      "rq":0,"rp":0,"rpe":347,"dl":314,"di":1859,"ds":1859,"de":1995,"dc":3020,
+      "l":3046,"le":3062},"navigation":{}}
+ja:{"engineName":"WebKit","deviceType":"HbbTV","userAgentOS":"Samsung",
+    "hbbtvVersion":"1.2.1", "hbbtvVendorName":"Samsung",
+    "hbbtvModelName":"SmartTV2016","hbbtvHardwareVersion":"T-HKMFKDEUC",
+    "hbbtvSoftwareVersion":"1160.6"}
+jsonp:NREUM.setToken
+\end{lstlisting}
+
+\vspace{1cm}
+
+\lstset{caption=Request parameter to internal Pro7 server (\url{http://hbbtv-track.redbutton.de}),
+captionpos=b,label=sniffing,showstringspaces=false,
+basicstyle={\fontfamily{pcr}\selectfont\footnotesize}}
+\begin{lstlisting}
+p:435,http://hbbtv.prosieben.de/Menue-Seiten/Magazin/Home/home/#100,1,
+  1920x1080,24,1,1499943844946,2,1280x720,1
+tz:2
+cet:120
+ct:Rubrik_Klick
+la:de
+pu:http://hbbtv.prosieben.de/v2/magazine/p7de
+ck1:p7de
+ck2:Magazin
+ck3:others
+ck10:Rubrik_Klick
+ck11:Stars
+ck12:col_1-row_2
+ck14:Sub-Homepage
+ck19:http://hbbtv.prosieben.de/v2/magazine/p7de/400
+ck23:not_set
+ck24:not_set
+ck25:364_36
+ck26:section-link
+ck27:74_191
+eor:1
+\end{lstlisting}
 
 \end{appendix}
 
