finished first evaluation part

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -141,3 +141,11 @@
   organization = {Google},
   url = {https://chromedevtools.github.io/devtools-protocol/tot/DOM/#event-documentUpdated}
 }
+
+@TECHREPORT{sengo,
+  institution = {Eurofins Digital Testing},
+  author = {Bob Campbell},
+  title = {HbbTV App Testing - Challenges and Solutions},
+  month = {12},
+  year = {2015}
+}
