add first comparison part

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -149,3 +149,9 @@
   month = {12},
   year = {2015}
 }
+
+@MISC{candybox,
+  title = {Candy Box},
+  author = {Suitest},
+  url = "\url{https://suite.st/docs/devices/candybox/}"
+}
