--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -29,6 +29,7 @@ MHP \> Multimedia Home Platform\\
 MPEG \> Moving Picture Experts Group\\
 QA \> Quality Assurance\\
 REST \> Representational state transfer\\
+SaaS \> Software as a Service\\
 SSH \> Secure Shell\\
 SSL \> Secure Sockets Layer\\
 UPnP \> Universal Plug and Play\\
