add Summary and Dissemination section

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -155,3 +155,10 @@
   author = {Suitest},
   url = "\url{https://suite.st/docs/devices/candybox/}"
 }
+
+@INPROCEEDINGS{Lehtonen2015DefiningMF,
+  title={Defining metrics for continuous delivery and deployment pipeline},
+  author={Timo Lehtonen and Sampo Suonsyrj{\"a} and Terhi Kilamo and Tommi Mikkonen},
+  booktitle={SPLST},
+  year={2015}
+}
