corrected first chapters

--- a/expose/content/index.tex
+++ b/expose/content/index.tex
@@ -24,7 +24,7 @@ a product for other broadcast companies.
 
 The first two month will include research on the HbbTV standard as well as research on how to embed the automation driver
 into the HbbTV app so it can be seamlessly used across apps and devices and properly scaled on a broader range of
-smart TVs. Another month is required to implement and extend the WebDriver protocol to support the automation
+Smart TVs. Another month is required to implement and extend the WebDriver protocol to support the automation
 of arbitrary TV devices. Also one month will be spend to add a remote debugging interface. The implementation of
 a testbed will take up the fourth month. Last but no least the last two month are reserved to write the actual
 thesis as well as finalising the work.
