--- a/misc/thanx.tex
+++ b/misc/thanx.tex
@@ -15,15 +15,10 @@ Kaiserin-Augusta-Allee 31\\
 \end{center}
 \vspace*{0.5cm}
 
-\noindent This dissertation originated in cooperation with the Fraunhofer Institute for Open Communication Systems (FOKUS).
+\noindent This dissertation originated in cooperation with the Fraunhofer Institute for Open Communication
+Systems (FOKUS).
 
 \vspace*{1cm}
 \noindent
-First of all I would like to thank Dipl.-Ing. Louay Bassbouss at the Fraunhofer Institute
-FOKUS for giving me the opportunity to carry out state of the art research in this field.
-\\
-\\
-Special thanks to Mister X and Mister Y for their guidance. --- Some personel words... ---
-\\
-\\
-Furthermore I would like to thank ...
+I would like to thank Dipl.-Ing. Louay Bassbouss at the Fraunhofer Institute FOKUS for giving me the opportunity
+to carry out state of the art research in this field.
