--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -6,7 +6,7 @@ AIT \> Application Information Table\\
 AJAX \> Asynchronous JavaScript and XML\\
 API \> Application Programming Interface\\
 ARM \> Advanced RISC Machine\\
-AV \> Audiovisual\\
+A/V \> Audiovisual\\
 CE \> Conformité Européenne\\
 CSS \> Cascading Stylesheets\\
 DASH \> Dynamic Adaptive Streaming over HTTP\\
