round 1 of corrections

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -106,8 +106,9 @@
 
 @MISC{raspberrypi,
   author = {Mirjana Maksimović, Vladimir Vujović, Nikola Davidović, Vladimir Milošević and Branko Perišić},
-  title = {Raspberry Pi as Internet of Things hardware: Performances and Constraints },
+  title = {Raspberry Pi as Internet of Things hardware: Performances and Constraints},
   year = {2014},
+  url = "\url{https://www.researchgate.net/publication/272175660_Raspberry_Pi_as_Internet_of_Things_hardware_Performances_and_Constraints}"
 }
 
 @BOOK{jenkins,
