round 2 of corrections

--- a/expose/content/index.tex
+++ b/expose/content/index.tex
@@ -9,15 +9,15 @@ set-top boxes connected to the Internet from different manufacturer.
 As the standard gains more popularity more broadcast companies expand their services to support HbbTV. Therefor the
 demand for smart developer tools increases as more apps are being published. Especially the requirement for
 automated testing grows as developers want to ensure a high quality of their deployed apps. Experiences have shown
-that manual quality ensureance tends to be very time consuming and error prone.
+that manual quality ensureance tends to be very time-consuming and error prone.
 
 \cchapter{Expected Outcome}
 
 The goal of this thesis is to implement a platform that not only helps developer to build HbbTV applications but
 also provides an automation driver that allows to run automation scripts written in any computer language on
 arbitrary TVs, that support the HbbTV standard. It will be based on the well known W3C WebDriver protocol that
-provides the technological infrastructure for todays desktop and mobile test automation. A testbed will provide
-developers a framework that can be used when connected to the Fraunhofer network or even commercialised as
+provides the technological infrastructure for today's desktop and mobile test automation. A testbed will provide
+developers a framework that can be used when connected to the Fraunhofer network or even commercialized as
 a product for other broadcast companies.
 
 \cchapter{Timeplan}
