--- a/misc/abstract_de.tex
+++ b/misc/abstract_de.tex
@@ -1,3 +1,7 @@
+% Da die meisten Leuten an der TU deutsch als Muttersprache haben, empfiehlt es sich, das
+% Abstract zusätzlich auch in deutsch zu schreiben. Man kann es auch nur auf deutsch
+% schreiben und anschließend einem Englisch-Muttersprachler zur Übersetzung geben.
+
 \thispagestyle{empty}
 \vspace*{0.2cm}
 
@@ -8,4 +12,5 @@
 \vspace*{0.2cm}
 
 \noindent
-Da die meisten Leuten an der TU deutsch als Muttersprache haben, empfiehlt es sich, das Abstract zusätzlich auch in deutsch zu schreiben. Man kann es auch nur auf deutsch schreiben und anschließend einem Englisch-Muttersprachler zur Übersetzung geben.
+
+Mein Abstrakt ...
