--- a/misc/abstract.tex
+++ b/misc/abstract.tex
@@ -52,21 +52,21 @@ factor for success is a solid continuous delivery pipeline that tests software i
 fashion and provides confidence in the quality of the product.
 
 The major objective of this study is to improve the process of building HbbTV applications
-by implementing a developing an automation platform that helps HbbTV developer to overcome
+by implementing a developing and automation platform that helps HbbTV developer to overcome
 issues that have been around on web and mobile platforms for years. It examines current
 standards in debugging and testing of software applications and demonstrates how applying
 these best practices to the TV space helps to increase the development velocity and software
 quality of HbbTV application. By building a debugging bridge that supports the Chrome DevTools
-Protocol it allows developer for the first time to inspect HbbTV applications in-depth live on
-the TV using modern web authoring tools like the Chromes DevTools application. Furthermore
+Protocol it allows developer for the first time to inspect HbbTV applications in-depth and live
+on the TV using modern web authoring tools like the Chromes DevTools application. Furthermore
 shows this thesis how an Appium automation driver can use this bridge to run functional tests
 on real Smart TVs in an automated fashion based on the WebDriver protocol.
 
 With that technology in place results demonstrate how powerful debugging HbbTV applications
 can be and how much information a developer can receive. From the full DOM tree to a JavaScript
-console up to a full report about all received network packages the state of the app is
+console up to a detailed report about all received network packages the state of the app is
 accessible at any given point in time. Moreover, proves the new HbbTV driver that running
-automated tests in a continuous delivery pipeline using a tool like TravisCI is fast,
-reliable and interoperable. A comparison to other HbbTV testing solutions reveals that this
-approach provides a higher scaleability, functionality and flexibility for debugging and
-automated testing than any solution in the market before.
+automated tests in a continuous delivery pipeline using a tool like Jenkins is fast, reliable
+and interoperable. A comparison at the end reveals that this approach provides a higher
+scaleability, functionality and flexibility for debugging and automated testing than any
+other existing solution in the market before.
