--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -8,6 +8,7 @@ API \> Application Programming Interface\\
 ARM \> Advanced RISC Machine\\
 A/V \> Audiovisual\\
 CE \> Conformité Européenne\\
+CI/CD \> Continuous Integration and Delivery\\
 CSS \> Cascading Stylesheets\\
 DASH \> Dynamic Adaptive Streaming over HTTP\\
 DevOps \> "software DEVelopment" and "information technology OPerationS"\\
