--- a/bib/references.bib
+++ b/bib/references.bib
@@ -163,3 +163,9 @@
   booktitle={SPLST},
   year={2015}
 }
+
+@MISC{shifttoautomated,
+  title={Moving From Manual to Automated Testing - A Tester’s Journey},
+  author={CrossBrowserTesting}
+  url = "\url{https://crossbrowsertesting.com/pdfs/moving-from-manual-to-automated-testing.pdf}"
+}
