fix bibtex entries

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1,23 +1,23 @@
 % This file was created with JabRef 2.5.
 % Encoding: Cp1252
 
-@ARTICLE{devtools,
+@MISC{devtools,
   author = {Brenda Barron},
   title = {Why You Should Start Using Chrome Developer Tools Right Now},
   year = {2015},
   publisher = {elegant themes},
-  url = {https://www.elegantthemes.com/blog/resources/why-you-should-start-using-chrome-developer-tools-right-now}
+  url = {\url{https://www.elegantthemes.com/blog/resources/why-you-should-start-using-chrome-developer-tools-right-now}}
 }
 
 @MANUAL{devtoolsprotocol,
   title = {Chrome DevTools Protocol Viewer - latest (tip-of-tree)},
   author = {Chrome DevTools team},
   organization = {Google},
-  url = {https://chromedevtools.github.io/devtools-protocol/}
+  url = {\url{https://chromedevtools.github.io/devtools-protocol/}}
 }
 
 @ARTICLE{zte,
-  author = {Yiling Xu, Shaowei Xie, Hao Chen, Le Yang, and Jun Sun},
+  author = {Xu, Yiling and Xie, Shaowei and Chen, Hao and Yang, Le and Sun, Jun},
   title = {DASH and MMT and Their Applications in ATSC 3.0},
   year = {2016},
   journal = {ZTE COMMUNICATIONS},
@@ -36,7 +36,7 @@
 @MISC{adrTV,
   author = {Gartnet},
   title = {Gartner IT Glossary > Addressable TV Advertising},
-  url = {http://www.gartner.com/it-glossary/addressable-tv-advertising}
+  note = {\url{http://www.gartner.com/it-glossary/addressable-tv-advertising}}
 }
 
 @MANUAL{hbbtv15,
@@ -66,6 +66,7 @@
   author = "HbbTV Developer",
   title = "Setting up a development environment --- HbbTV Developer{,} ",
   year = "2015",
+  month = "10",
   url = "\url{http://www.hbbtv-developer.com/site/wiki/index.php?title=Setting_up_a_development_environment&oldid=658}",
   note = "[Online; accessed 6-June-2017]"
 }
@@ -87,7 +88,8 @@
   author = {BEPEC},
   title = {What exactly is DevOps?},
   year = {2017},
-  url = "\url{https://www.bepec.in/single-post/2017/02/09/What-exactly-is-DevOps}"
+  month = {02},
+  note = "\url{https://www.bepec.in/single-post/2017/02/09/What-exactly-is-DevOps}"
 }
 
 @MISC{w3ctesting,
@@ -105,7 +107,7 @@
 }
 
 @MISC{raspberrypi,
-  author = {Mirjana Maksimović, Vladimir Vujović, Nikola Davidović, Vladimir Milošević and Branko Perišić},
+  author = {Maksimović, Mirjana and Vujović, Vladimir and Davidović, Nikola and Milošević, Vladimir and Perišić, Branko},
   title = {Raspberry Pi as Internet of Things hardware: Performances and Constraints},
   year = {2014},
   url = "\url{https://www.researchgate.net/publication/272175660_Raspberry_Pi_as_Internet_of_Things_hardware_Performances_and_Constraints}"
@@ -125,7 +127,7 @@
   publisher = {O'Reilly Media},
   year = {2014},
   month = {7},
-  author = {Yakov Fain, Victor Rasputnis, Anatole Tartakovsky, Viktor Gamov},
+  author = {Fain, Yakov and Rasputnis, Victor and Tartakovsky, Anatole and Gamov, Viktor},
   note = {ISBN: 1449356818}
 }
 
@@ -133,14 +135,14 @@
   title = {TypeScript Deep Dive},
   author = {Basarat Ali Syed},
   year = {2017},
-  url = "\url{https://www.gitbook.com/book/basarat/typescript/details}"
+  note = "\url{https://www.gitbook.com/book/basarat/typescript/details}"
 }
 
 @MANUAL{devtoolsprotocolDOM,
   title = {Chrome DevTools Protocol Viewer - latest (tip-of-tree) - DOM Domain},
   author = {Chrome DevTools team},
   organization = {Google},
-  url = {https://chromedevtools.github.io/devtools-protocol/tot/DOM/#event-documentUpdated}
+  note = {\url{https://chromedevtools.github.io/devtools-protocol/tot/DOM/#event-documentUpdated}}
 }
 
 @TECHREPORT{sengo,
@@ -154,18 +156,18 @@
 @MISC{candybox,
   title = {Candy Box},
   author = {Suitest},
-  url = "\url{https://suite.st/docs/devices/candybox/}"
+  note = "\url{https://suite.st/docs/devices/candybox/}"
 }
 
 @INPROCEEDINGS{Lehtonen2015DefiningMF,
-  title={Defining metrics for continuous delivery and deployment pipeline},
-  author={Timo Lehtonen and Sampo Suonsyrj{\"a} and Terhi Kilamo and Tommi Mikkonen},
-  booktitle={SPLST},
-  year={2015}
+  title = {Defining metrics for continuous delivery and deployment pipeline},
+  author = {Timo Lehtonen and Sampo Suonsyrj{\"a} and Terhi Kilamo and Tommi Mikkonen},
+  booktitle = {SPLST},
+  year = {2015}
 }
 
 @MISC{shifttoautomated,
-  title={Moving From Manual to Automated Testing - A Tester’s Journey},
-  author={CrossBrowserTesting}
-  url = "\url{https://crossbrowsertesting.com/pdfs/moving-from-manual-to-automated-testing.pdf}"
+  title = {Moving From Manual to Automated Testing - A Tester’s Journey},
+  author = {CrossBrowserTesting},
+  note = "\url{https://crossbrowsertesting.com/pdfs/moving-from-manual-to-automated-testing.pdf}"
 }
