different clean ups

--- a/misc/self-assertion.tex
+++ b/misc/self-assertion.tex
@@ -7,8 +7,7 @@
 \vspace*{6cm}
 
 \noindent
-Hereby I declare that I wrote this thesis myself with the help of no more than the
-mentioned literature and auxiliary means.
+Hereby I declare that I wrote this thesis myself with the help of no more than the mentioned literature and auxiliary means.
 \vspace{2cm}
 
 \noindent
