--- a/misc/thanx.tex
+++ b/misc/thanx.tex
@@ -15,10 +15,15 @@ Kaiserin-Augusta-Allee 31\\
 \end{center}
 \vspace*{0.5cm}
 
-\noindent This dissertation originated in cooperation with the Fraunhofer Institute for Open Communication
-Systems (FOKUS).
+\noindent This dissertation originated in cooperation with the Fraunhofer Institute for Open Communication Systems (FOKUS).
 
 \vspace*{1cm}
 \noindent
-I would like to thank Dipl.-Ing. Louay Bassbouss at the Fraunhofer Institute FOKUS for giving me the opportunity
-to carry out state of the art research in this field.
+I would like to thank Dipl.-Ing. Louay Bassbouss at the Fraunhofer Institute FOKUS for giving me the opportunity to carry out state of the art research in this field as well as providing me with helpful feedback at all times. It was really great to be able to wrap up my studies researching in one of my most passionate topics.
+
+\vspace*{1cm}
+\noindent
+I also want to thank the whole team at FAME for being so wonderful human beings. I really enjoyed working together with you guys.
+
+\vspace*{1cm}
+\noindent In addition, I thank all of my proof-readers for their work and their patience in looking through all chapters. Thank you Thomas Fett and Esben Baden Smith.\\
