--- a/expose/content/index.tex
+++ b/expose/content/index.tex
@@ -1,33 +1,18 @@
 \cchapter{Introduction}
 
-The Hybrid Broadcast Broadband TV (short HbbTV) is an industry standard for the delivery of broadcast and broadband TV
-through a single user interface based on web standards like HTML and JavaScript. It is supported by (smart) TVs and
-set-top boxes connected to the Internet from different manufacturer.
+The Hybrid Broadcast Broadband TV (short HbbTV) is an industry standard for the delivery of broadcast and broadband TV through a single user interface based on web standards like HTML and JavaScript. It is supported by (smart) TVs and set-top boxes connected to the Internet from different manufacturer.
 
 \cchapter{Problem Statement}
 
-As the standard gains more popularity more broadcast companies expand their services to support HbbTV. Therefor the
-demand for smart developer tools increases as more apps are being published. Especially the requirement for
-automated testing grows as developers want to ensure a high quality of their deployed apps. Experiences have shown
-that manual quality ensureance tends to be very time-consuming and error prone.
+As the standard gains more popularity more broadcast companies expand their services to support HbbTV. Therefor the demand for smart developer tools increases as more apps are being published. Especially the requirement for automated testing grows as developers want to ensure a high quality of their deployed apps. Experiences have shown that manual quality ensureance tends to be very time-consuming and error prone.
 
 \cchapter{Expected Outcome}
 
-The goal of this thesis is to implement a platform that not only helps developer to build HbbTV applications but
-also provides an automation driver that allows to run automation scripts written in any computer language on
-arbitrary TVs, that support the HbbTV standard. It will be based on the well known W3C WebDriver protocol that
-provides the technological infrastructure for today's desktop and mobile test automation. A testbed will provide
-developers a framework that can be used when connected to the Fraunhofer network or even commercialized as
-a product for other broadcast companies.
+The goal of this thesis is to implement a platform that not only helps developer to build HbbTV applications but also provides an automation driver that allows to run automation scripts written in any computer language on arbitrary TVs, that support the HbbTV standard. It will be based on the well known W3C WebDriver protocol that provides the technological infrastructure for today's desktop and mobile test automation. A testbed will provide developers a framework that can be used when connected to the Fraunhofer network or even commercialized as a product for other broadcast companies.
 
 \cchapter{Timeplan}
 
-The first two month will include research on the HbbTV standard as well as research on how to embed the automation driver
-into the HbbTV app so it can be seamlessly used across apps and devices and properly scaled on a broader range of
-Smart TVs. Another month is required to implement and extend the WebDriver protocol to support the automation
-of arbitrary TV devices. Also one month will be spend to add a remote debugging interface. The implementation of
-a testbed will take up the fourth month. Last but no least the last two month are reserved to write the actual
-thesis as well as finalising the work.
+The first two month will include research on the HbbTV standard as well as research on how to embed the automation driver into the HbbTV app so it can be seamlessly used across apps and devices and properly scaled on a broader range of Smart TVs. Another month is required to implement and extend the WebDriver protocol to support the automation of arbitrary TV devices. Also one month will be spend to add a remote debugging interface. The implementation of a testbed will take up the fourth month. Last but no least the last two month are reserved to write the actual thesis as well as finalising the work.
 
 \cchapter{References}
 
