--- a/misc/abstract.tex
+++ b/misc/abstract.tex
@@ -1,29 +1,12 @@
-% This template is intended to give an introduction of how to write diploma and master thesis at
-% the chair 'Architektur der Vermittlungsknoten' of the Technische Universität Berlin. Please
-% don't use the term 'Technical University' in your thesis because this is a proper name.
+% This template is intended to give an introduction of how to write diploma and master thesis at the chair 'Architektur der Vermittlungsknoten' of the Technische Universität Berlin. Please don't use the term 'Technical University' in your thesis because this is a proper name.
 %
-% On the one hand this PDF should give a guidance to people who will soon start to write their
-% thesis. The overall structure is explained by examples. On the other hand this text is provided
-% as a collection of LaTeX files that can be used as a template for a new thesis. Feel free to
-% edit the design.
+% On the one hand this PDF should give a guidance to people who will soon start to write their thesis. The overall structure is explained by examples. On the other hand this text is provided as a collection of LaTeX files that can be used as a template for a new thesis. Feel free to edit the design.
 %
-% It is highly recommended to write your thesis with LaTeX. I prefer to use Miktex in combination
-% with TeXnicCenter (both freeware) but you can use any other LaTeX software as well. For managing
-% the references I use the open-source tool jabref. For diagrams and graphs I tend to use MS Visio
-% with PDF plugin. Images look much better when saved as vector images. For logos and 'external'
-% images use JPG or PNG. In your thesis you should try to explain as much as possible with the
-% help of images.
+% It is highly recommended to write your thesis with LaTeX. I prefer to use Miktex in combination with TeXnicCenter (both freeware) but you can use any other LaTeX software as well. For managing the references I use the open-source tool jabref. For diagrams and graphs I tend to use MS Visio with PDF plugin. Images look much better when saved as vector images. For logos and 'external' images use JPG or PNG. In your thesis you should try to explain as much as possible with the help of images.
 %
-% The abstract is the most important part of your thesis. Take your time to write it as good as
-% possible. Abstract should have no more than one page. It is normal to rewrite the abstract
-% again and again, so  probaly you won't write the final abstract before the last week of due-date.
-% Before submitting your thesis you should give at least the abstract, the introduction and the
-% conclusion to a native english speaker. It is likely that almost no one will read your thesis
-% as a whole but most people will read the abstract, the introduction and the conclusion.
+% The abstract is the most important part of your thesis. Take your time to write it as good as possible. Abstract should have no more than one page. It is normal to rewrite the abstract again and again, so  probaly you won't write the final abstract before the last week of due-date. Before submitting your thesis you should give at least the abstract, the introduction and the conclusion to a native english speaker. It is likely that almost no one will read your thesis as a whole but most people will read the abstract, the introduction and the conclusion.
 %
-% Start with some introductionary lines, followed by some words why your topic is relevant and
-% why your solution is needed concluding with 'what I have done'. Don't use too many buzzwords.
-% The abstract may also be read by people who are not familiar with your topic.
+% Start with some introductionary lines, followed by some words why your topic is relevant and why your solution is needed concluding with 'what I have done'. Don't use too many buzzwords. The abstract may also be read by people who are not familiar with your topic.
 
 \thispagestyle{empty}
 \vspace*{1.0cm}
@@ -36,37 +19,8 @@
 
 \noindent
 
-Hybrid Broadcast Broadband TV is one of the latest big developments in the TV industry. It is
-an effort to standardize the delivery of user-friendly enhanced TV services to the end consumer
-through connected Smart TVs and set-top boxes. As the standard evolves, it gets rolled out to
-more countries in the world. With more devices being equipped with this technology, a larger
-audience is getting access to it which opens interesting opportunities for broadcasters to
-create new revenue streams via advertisement or pay-TV platforms. Due to the increasing number
-of manufactures and device models in the market the support level is highly fragmented and
-aggravates the development of HbbTV applications. To ensure the functionality on a majority of
-devices a cumbersome and long manual testing process is required which is opposed to current
-standards in software development. The software industry has shifted over the last 5 years
-from a milestone oriented to an agile approach where shipping qualitative software fast and
-iteratively is the number one principle. To establish a high development velocity a key
-factor for success is a solid continuous delivery pipeline that tests software in an automated
-fashion and provides confidence in the quality of the product.
+Hybrid Broadcast Broadband TV is one of the latest big developments in the TV industry. It is an effort to standardize the delivery of user-friendly enhanced TV services to the end consumer through connected Smart TVs and set-top boxes. As the standard evolves, it gets rolled out to more countries in the world. With more devices being equipped with this technology, a larger audience is getting access to it which opens interesting opportunities for broadcasters to create new revenue streams via advertisement or pay-TV platforms. Due to the increasing number of manufactures and device models in the market the support level is highly fragmented and aggravates the development of HbbTV applications. To ensure the functionality on a majority of devices a cumbersome and long manual testing process is required which is opposed to current standards in software development. The software industry has shifted over the last 5 years from a milestone oriented to an agile approach where shipping qualitative software fast and iteratively is the number one principle. To establish a high development velocity a key factor for success is a solid continuous delivery pipeline that tests software in an automated fashion and provides confidence in the quality of the product.
 
-The major objective of this study is to improve the process of building HbbTV applications
-by implementing a developing and automation platform that helps HbbTV developer to overcome
-issues that have been around on web and mobile platforms for years. It examines current
-standards in debugging and testing of software applications and demonstrates how applying
-these best practices to the TV space helps to increase the development velocity and software
-quality of HbbTV application. By building a debugging bridge that supports the Chrome DevTools
-Protocol it allows developer for the first time to inspect HbbTV applications in-depth and live
-on the TV using modern web authoring tools like the Chromes DevTools application. Furthermore
-shows this thesis how an Appium automation driver can use this bridge to run functional tests
-on real Smart TVs in an automated fashion based on the WebDriver protocol.
+The major objective of this study is to improve the process of building HbbTV applications by implementing a developing and automation platform that helps HbbTV developer to overcome issues that have been around on web and mobile platforms for years. It examines current standards in debugging and testing of software applications and demonstrates how applying these best practices to the TV space helps to increase the development velocity and software quality of HbbTV application. By building a debugging bridge that supports the Chrome DevTools Protocol it allows developer for the first time to inspect HbbTV applications in-depth and live on the TV using modern web authoring tools like the Chromes DevTools application. Furthermore shows this thesis how an Appium automation driver can use this bridge to run functional tests on real Smart TVs in an automated fashion based on the WebDriver protocol.
 
-With that technology in place results demonstrate how powerful debugging HbbTV applications
-can be and how much information a developer can receive. From the full DOM tree to a JavaScript
-console up to a detailed report about all received network packages the state of the app is
-accessible at any given point in time. Moreover, proves the new HbbTV driver that running
-automated tests in a continuous delivery pipeline using a tool like Jenkins is fast, reliable
-and interoperable. A comparison at the end reveals that this approach provides a higher
-scaleability, functionality and flexibility for debugging and automated testing than any
-other existing solution in the market before.
+With that technology in place results demonstrate how powerful debugging HbbTV applications can be and how much information a developer can receive. From the full DOM tree to a JavaScript console up to a detailed report about all received network packages the state of the app is accessible at any given point in time. Moreover, proves the new HbbTV driver that running automated tests in a continuous delivery pipeline using a tool like Jenkins is fast, reliable and interoperable. A comparison at the end reveals that this approach provides a higher scaleability, functionality and flexibility for debugging and automated testing than any other existing solution in the market before.
